style.css
/*
Theme Name: Hydra
Author: The BoldGrid Team
Theme URI: https://www.boldgrid.com/hydra
Author URI: https://www.boldgrid.com/the-team
Description: Designed specifically for use with the BoldGrid suite of plugins, all BoldGrid themes are highly customizable, responsive to a wide range of devices, and of course, beautiful. Every BoldGrid theme includes five pre-selected color palettes and an advanced tool for creating your own unique palette. In addition, all themes feature multiple menu locations and widget areas, which are easily customizable to suit your needs. So if you're looking for a theme that looks great, feels modern and professional, and offers plenty of features to make it your own, you've chosen well.
Version: 1.19
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: boldgrid-hydra
Template: prime
Tags: custom-background, custom-colors, custom-menu, editor-style, responsive-layout, rtl-language-support, translation-ready, boldgrid-theme-32
*/

/*------------------------------------------------------------------------
>>> TABLE OF CONTENTS:
--------------------------------------------------------------------------
# Base Styles
	## Positioning
	## Typography
	## Titles
	## Buttons
	## Et Cetera
# Header
# Navigation
	## Main Menu
	## Other Menus
	## Social Menus
# GridBlocks
# Modules
	## Global
	## Alpha
# Pages
# Posts
# Plugins
	## WP Canvas Gallery
	## WooCommerce
# Footer
------------------------------------------------------------------------*/

/*------------------------------------------------------------------------
# Base Styles
------------------------------------------------------------------------*/

/*-----------------------------------------------
## Positioning
-----------------------------------------------*/
/* xs */
.entry-content {
	margin-top: 12%;
	padding-bottom: 25px;
	padding-top: 25px;
}

/* sm */
@media (min-width: 768px) {
	.entry-content {
		margin-top: 30%;
	}
}

/* md */
@media (min-width: 992px) {
	.entry-content {
		margin-top: 12%;
	}
}

/*-----------------------------------------------
## Typography
-----------------------------------------------*/
.entry-title,
.mod-beta h2 {
	font-weight: bold;
}
.mod-alpha h2 {
	line-height: normal;
}
.p-button-primary,
.p-button-secondary {
	white-space: nowrap;
}
a:hover,
a:focus,
.site-footer a {
	text-decoration: underline;
}
a,
.link-primary,
.link-secondary,
.button-primary:hover,
.button-primary:focus,
.button-primary:active,
.open > .dropdown-toggle.btn-primary,
input[type="submit"]:hover,
input[type="submit"]:focus,
.button-secondary:hover,
.button-secondary:active,
.woocommerce p.buttons a.button:hover,
.woocommerce p.buttons a.button:focus,
.site-footer a:hover,
.site-footer a:focus {
	text-decoration: none;
}

.site-title,
.site-description,
.call-to-action,
.entry-title,
.menu-social,
.navbar-nav > li > a,
#secondary-menu,
#tertiary-menu,
.menu-social,
.icon,
.heading p,
.site-footer,
.xs-center,
.mod-img,
.mod-img-circle,
.p-button-primary,
.p-button-secondary {
	text-align: center;
}
.cat-item,
.archive .entry-title,
.menu-item-object-page,
#footer-widget-area {
	text-align: left;
}
#menu-social li a {
	text-align: right;
}

/* sm */
@media (min-width: 768px) {
	.site-title,
	.site-description {
		text-align: left;
	}
	.menu-social,
	.navbar-nav > li > a {
		text-align: right;
	}
}

/* md */
@media (min-width: 992px) {
	.xs-center,
	.mod-img,
	.mod-img-circle,
	.gridblock .p-button-primary,
	.gridblock .p-button-secondary,
	.single .entry-title {
		text-align: left;
	}
}

/*-----------------------------------------------
## Titles
-----------------------------------------------*/
.page-template-page_home .entry-title {
	display: none;
}
.hentry {
	margin: 0 auto;
}

/* Headings */
.heading h3 {
	margin-top: 10px;
}
.heading {
	margin-bottom: 15px;
}

/* xs */
.entry-title {
	padding-bottom: 1.5em;
}
.archive .entry-title {
	margin-top: 0;
	padding-bottom: 15px;
	padding-top: 25px;
	text-shadow: none;
}

/* sm */
@media (min-width: 768px) {
	.entry-title {
		margin-top: -185px;
		padding-bottom: 3em;
		padding-top: 1em;
	}
}

/* md */
@media (min-width: 992px) {
	.entry-title,
	.entry-title a {
		margin-top: -185px;
		padding-bottom: 2.5em;
		padding-top: 1.5em;
	}
}

/*-----------------------------------------------
## Buttons
-----------------------------------------------*/
.button-primary,
.button-secondary,
input[type="submit"] {
	background: none;
	margin: 10px 0;
	padding: 10px 25px;
	transition: all 0.5s ease 0s;
}

/* Positioning */
.p-button-primary,
.p-button-secondary {
	margin: 30px 0;
}
.gridblock .p-button-secondary {
	margin: 0;
}

/* Call to Action */
.call-to-action .button-primary {
	margin: 25px 0 0;
	padding: 20px 25px;
	transition: all .5s;
}

/* Block vs. Inline */
.button-primary,
.button-secondary {
	display: block;
	margin-top: 15px;
}

/* sm */
@media (min-width: 600px) {
	.button-primary,
	.button-secondary {
		display: inline;
		margin-top: 0;
	}
	.gridblock .p-button-secondary {
		margin: 30px 0;
	}
}

/*-----------------------------------------------
## Et Cetera
-----------------------------------------------*/
hr {
	margin: 65px 0 50px;
}

/*------------------------------------------------------------------------
# Header
------------------------------------------------------------------------*/
/* Sticky Header Scroll */
.site-header {
	z-index: 999;
}
.smaller {
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	-ms-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
}

/* Call to Action */
.call-to-action {
	margin-bottom: 40px;
	padding-top: 60px;
}

.page-template-default .call-to-action,
.page-template-page_home .header-title {
	display: none;
}

/* xs */
.site-title {
	padding-top: 20px;
}
.site-description {
	margin-left: 2px;
	margin-top: -20px;
	padding-top: 10px;
}

/* sm */
@media (min-width: 768px) {
	.site-title {
		margin-bottom: 5px;
		padding-bottom: 0;
		padding-top: 0;
	}
	.site-header {
		left: 0;
		padding-bottom: 0;
		position: fixed;
		top: 25;
		width: 100%;
	}
	.classie-spacer {
		height: 45px;
	}
	.smaller {
		padding-bottom: 0;
	}
	.smaller .classie-spacer {
		height: 20px;
	}
	.smaller #primary-navbar {
		padding-top: 0;
	}
	.page .smaller .social-media {
		padding-top: 20px;
	}
	.call-to-action {
		padding-top: 130px;
	}
}

/* md */
@media (min-width: 992px) {
	.menu-social {
		margin-top: 8px;
		padding: 15px 0 0;
	}
	.navbar-nav li.menu-social {
		margin-top: 0;
	}
}

/*------------------------------------------------------------------------
# Navigation
------------------------------------------------------------------------*/

/*-----------------------------------------------
## Main Menu
-----------------------------------------------*/
.navbar {
	margin-bottom: 0;
	margin-top: -10px;
}
.navbar-default {
	background: none;
	border: none;
	padding-right: 0;
}
.navbar-nav > li > a {
	padding: 12px 10px;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus,
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
	background: none;
}

/* Dropdown */
.navbar-nav > li > .dropdown-menu {
	border-top-right-radius: 5px;
}
.dropdown-menu {
	border: none;
}

/* sm */
@media (min-width: 768px) {
	#primary-navbar {
		padding-right: 0;
	}
	.navbar-default {
		float: right;
	}
	.navbar-nav {
		float: right;
	}
}

/*-----------------------------------------------
## Other Menus
-----------------------------------------------*/
#secondary-menu a,
#tertiary-menu a,
#menu-social a {
	padding: 0 5px;
}
.boldgrid-framework-menu li::after {
	content: none;
}

/*-----------------------------------------------
## Social Menus
-----------------------------------------------*/
.menu-social {
	padding: 0;
}
.menu-social ul {
	padding-left: 0;
}
.menu-social li {
	display: inline;
	list-style: none;
	padding-right: 10px;
}
#menu-social ul {
	padding-left: 0px;
}
#menu-social ul li {
	position: relative;
	display:  inline-block;
}
#menu-social li a {
	display: inline-block;
}

/*------------------------------------------------------------------------
# GridBlocks
------------------------------------------------------------------------*/
.gridblock ul {
	list-style-type: none;
	padding-left: 26px;
}
.gridblock ul li:before {
	-moz-background-clip: padding;
	-moz-border-radius: 3px;
	-webkit-background-clip: padding-box;
	-webkit-border-radius: 3px;
	background-clip: padding-box;
	border-radius: 3px;
	content: '';
	display: inline-block;
	height: 6px;
	margin-right: 8px;
	position: relative;
	width: 6px;
}
.gridblock hr {
	border: 0;
	height: 1px;
	margin-top: 10px;
	margin-bottom: 30px;
}

/*------------------------------------------------------------------------
# Modules
------------------------------------------------------------------------*/

/*-----------------------------------------------
## Global
-----------------------------------------------*/
blockquote,
.mod-blockquote {
	padding: 0 20px;
}

/*-----------------------------------------------
## Alpha
-----------------------------------------------*/
.mod-alpha {
	background: url('images/quote.png') no-repeat;
	background-position: left;
	height: 100%;
	margin: 0 auto;
	padding-top: 50px;
	width: 80%;
}

/*------------------------------------------------------------------------
# Pages
------------------------------------------------------------------------*/

/*------------------------------------------------------------------------
# Posts
------------------------------------------------------------------------*/
.widget-area {
	margin-top: 25px;
	padding: 25px;
	list-style:none;
}

/* Comments */
.comment-form-comment label {
	float: left;
	padding-right: 15px;
}
.panel-footer {
	padding: 25px 15px;
}

/* Call to Action */
.single .call-to-action {
	display: none;
}

/* Buttons */
.form-submit .submit {
	background: none;
	margin: 25px 0 0;
	padding: 20px 25px;
	transition: all .5s;
	-webkit-border-radius: 0;
	-moz-border-radius: 0;
	border-radius: 0;
}

/*------------------------------------------------------------------------
# Plugins
------------------------------------------------------------------------*/

/*-----------------------------------------------
## WP Canvas Gallery
-----------------------------------------------*/
.gallery-icon img:hover {
	filter: brightness(35%);
	-webkit-filter: brightness(35%);
	-moz-filter: brightness(35%);
	-o-filter: brightness(35%);
	-ms-filter: brightness(35%);
}

/*-----------------------------------------------
## WooCommerce
-----------------------------------------------*/
.woocommerce .page-title {
	margin: 0;
}
.woocommerce p.buttons a.button:hover {
	background-image: none;
}

/*------------------------------------------------------------------------
# Footer
------------------------------------------------------------------------*/
.site-footer {
	padding-bottom: 30px;
}
.menu-item-object-page,
.cat-item {
	list-style: none;
}
#footer-widget-area {
	padding-top: 15px;
}
ul#footer-center-items {
	padding: 0;
}
.attribution {
	margin-top: 0;
}

